--- a/chapter1.tex
+++ b/chapter1.tex
@@ -17,7 +17,7 @@
 
 
 
-クライエントの会話としては，内容がどの課題領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+クライエントの会話としては，内容がどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．
 
 クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 
